# file-finder

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  lint-staged.config.ts  package.json  pnpm-lock.yaml  schema.json  schema.yaml
.changeset/changesets/: meaningfully-titillated-guppy.md  neglectfully-rousing-rabbitfish.md
.github/workflows/: changeset-release.yaml  changeset.yaml  ci.yml  prettier.yaml  release.yml
examples/: no-js.yaml
src/: main.rs  rule.rs
tests/: integration_test.rs
tests/data/: using-and.yaml  using-or.yaml
