[package]
name = "file-finder"
description = "CLI to find files in a directory tree based on various criteria"
homepage = "https://github.com/issy/file-finder"
repository = "https://github.com/issy/file-finder"
version = "0.5.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_args = { version = "0.2.0" }
serde_yaml_ng = { workspace = true }
tokio = { version = "1.52.3", features = ["default", "rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3.32" }
ignore = { version = "0.4.26" }

[build-dependencies]
typify = { version = "0.7.0" }
serde_yaml_ng = { workspace = true }
schemars = { version = "0.8.22" }
prettyplease = { version = "0.2.37" }
syn = { version = "2.0.118" }

[dev-dependencies]
assert_cmd = { version = "2.2.2" }
predicates = { version = "3.1.4" }
tempfile = { version = "3.27.0" }

[workspace.dependencies]
serde_yaml_ng = { version = "0.10.0" }

[workspace.metadata]

[workspace.metadata.changeset]
commit = true
tags = true
keep-changesets = false
tag-format = "version-only"
changelog = "root"
comparison-links = "enabled"
zero-version-behavior = "auto-promote-on-major"
base-branch = "origin/main"
none-bump-behavior = "promote-to-patch"
none-bump-promote-message-template = "Internal architectural changes"
commit-title-template = "{new-version}"
changes-in-body = true

[profile.dist]
inherits = "release"
lto = "thin"
